data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_feature_WorldGenHugeTrees.md
# WorldGenHugeTrees

**Inheritance:** java.lang.Object → net.minecraft.world.gen.feature.WorldGenerator → net.minecraft.world.gen.feature.WorldGenAbstractTree → net.minecraft.world.gen.feature.WorldGenHugeTrees

## Class signature

```java
public abstract class WorldGenHugeTrees extends WorldGenAbstractTree
```

## Constructors

- `WorldGenHugeTrees(boolean p_i45458_1_, int p_i45458_2_, int p_i45458_3_, int p_i45458_4_, int p_i45458_5_)`

## Methods

- `protected int func_150533_a(java.util.Random p_150533_1_)`
- `protected void func_150534_b(World p_150534_1_, int p_150534_2_, int p_150534_3_, int p_150534_4_, int p_150534_5_, java.util.Random p_150534_6_)`
- `protected void func_150535_a(World p_150535_1_, int p_150535_2_, int p_150535_3_, int p_150535_4_, int p_150535_5_, java.util.Random p_150535_6_)`
- `protected boolean func_150537_a(World p_150537_1_, java.util.Random p_150537_2_, int p_150537_3_, int p_150537_4_, int p_150537_5_, int p_150537_6_)`

## Fields

- `protected int baseHeight`
- `protected int field_150538_d`
- `protected int leavesMetadata`
- `protected int woodMetadata`